improving jogo layout

--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -20,6 +20,7 @@
 				});
 
 				$("#img_suditos").click(function(){
+					$("#msg").hide();
 					$.ajax({
 						url: "/aldeoes",
 						method: "get",
@@ -30,6 +31,7 @@
 				})
 
 				$("#img_pergaminhos").click(function(){
+					$("#msg").hide();
 					$.ajax({
 						url: "/pergaminhos",
 						method: "get",
@@ -55,7 +57,7 @@
 	    <div class="container">
 
 		    <% if (comando_invalido == 's'){ %>
-		    	<div class="alert alert-danger">
+		    	<div class="alert alert-danger" id="msg">
 		    		<strong>Comando Inválido, informe todos os campos!</strong>
 		    	</div>
 		    <% } %>
@@ -105,7 +107,7 @@
 				<div class="row">
 					<div class="col-sm-1">
 						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="img_suditos"/>
-						<%= jogo.suditos %>
+						<br/><%= jogo.suditos %>
 					</div>
 					
 					<div class="col-sm-1">
