receiving acoes into pergaminhos

--- a/app/views/pergaminhos.ejs
+++ b/app/views/pergaminhos.ejs
@@ -1,7 +1,13 @@
 <div id="pergaminhos">					
 	<h3>Pergaminhos</h3>
 	
+
 	<ul>
+            <% if (acoes.length > 0) { %>
+                <% acoes.forEach(function(acao){ %>
+                    <li>Ação: <%= acao.acao %> | Quantidade: <%= acao.quantidade %></li>
+                <% }) %>
+            <% }%>
 		<li>1 enforcamento(s) programado - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
 		<li>2 aldeão(ões) em treinamento de magia - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
 		<li>1 aldeão(ões) em treinamento de história - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
