--- a/app/views/pergaminhos.ejs
+++ b/app/views/pergaminhos.ejs
@@ -30,7 +30,7 @@
 
              %>
                     <li><%= acao.quantidade %> <%= txt_acao %> 
-                      <small> - restam <%= segundos_restantes %> segundos
+                      <small> - restam <span class="segundos_restantes"><%= segundos_restantes %></span> segundos
                       <a href="#">revogar ordem</a></small>
                     </li>
              <%    }) 
