--- a/app/views/pergaminhos.ejs
+++ b/app/views/pergaminhos.ejs
@@ -31,7 +31,7 @@
              %>
                     <li><%= acao.quantidade %> <%= txt_acao %> 
                       <small> - restam <span class="segundos_restantes"><%= segundos_restantes %></span> segundos
-                      <a href="#">revogar ordem</a></small>
+                      <a href="/revogar_acao?id=<%= acao._id %>">revogar ordem</a></small>
                     </li>
              <%    }) 
               } %>
