--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -96,6 +96,11 @@
 		    		<strong>Ação determinada já acabou!</strong>
 		    	</div>
 		    <% } %>
+		    <% if (msg == 'd'){ %>
+		    	<div class="alert alert-success" id="msg">
+		    		<strong>Ação revogada!</strong>
+		    	</div>
+		    <% } %>
 	    	
 			<div class="row">
 	    		<div class="col-sm-3 casa">
