--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,7 +32,7 @@
 				<% } %>
 				<form class="form-inline form-entrar" action="/autenticar" method="post">
 					<div class="form-group">				
-						<input type="text" name="usuario" id="usuario" placeholder="Usuário" class="form-control" autocomplete="off" value="<%= dados.usuario %>" />
+						<input type="text" name="usuario" id="usuario" placeholder="Usuário" class="form-control"  value="<%= dados.usuario %>" />
 						<input type="password" name="senha" id="senha" placeholder="Senha" class="form-control" value="<%= dados.senha %>" />
 						<button type="submit" class="btn btn-success">Entrar</button>
 						<button type="button" class="btn btn-info" onclick="location.href='/cadastro'">Cadastro</button>
